header footer fix on mobile

--- a/global.css
+++ b/global.css
@@ -7,9 +7,14 @@
     font-family: "Didact Gothic", serif;
 }
 
+
 :root {
     --primary: "#4a044e",
         --secondary: "#e11d48",
+}
+
+p{
+    margin-bottom: 0;
 }
 
 .nav-item {
@@ -43,7 +48,7 @@
     margin: 20px 0;
 }
 
-.hero-content{
+.hero-content {
     padding: 0 50px;
 
 }
@@ -58,14 +63,11 @@ footer {
 }
 
 .footer h1 {
-    font-size: 1em;
+    font-size: 1.4em;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
-.footer-contact li {
-    list-style-type: none;
-}
 
 .footer-link li {
     list-style-type: none;
@@ -86,4 +88,32 @@ footer {
     border-radius: 50%;
     display: flex;
     align-items: center;
+}
+
+
+/* media query */
+
+@media screen and (max-width: 768px) {
+
+    .hero {
+        height: 500px;
+        padding: 0;
+    }
+
+
+    .hero h1 {
+        font-size: 2em;
+    }
+
+    .hero h2 {
+        font-size: 1.2em;
+    }
+
+    .hero-content {
+        padding: 20px;
+    }
+
+    .footer h1 {
+        font-size: 0.8em;
+    }
 }
